istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-app
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
  - route:
    - destination:
        host: hello-app
        subset: v1
      weight: 85
    - destination:
        host: hello-app
        subset: v2
      weight: 15

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-app
spec:
  host: hello-app
  subsets:
  - name: v1
    labels:
      version: v1.1
  - name: v2
    labels:
      version: v1.2
